// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WindowSize
    classes={
      Object {
        "bottomWrap": "bottomWrap",
        "buttonMobile": "buttonMobile",
        "column": "column",
        "footer": "footer",
        "footerBottom": "footerBottom",
        "footerWithoutColumns": "footerWithoutColumns",
        "link": "link",
        "listElement": "listElement",
        "mobileListElement": "mobileListElement",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "bottomLinks": Array [],
      "classes": Object {
        "bottomWrap": "bottomWrap",
        "buttonMobile": "buttonMobile",
        "column": "column",
        "footer": "footer",
        "footerBottom": "footerBottom",
        "footerWithoutColumns": "footerWithoutColumns",
        "link": "link",
        "listElement": "listElement",
        "mobileListElement": "mobileListElement",
      },
      "columns": Array [],
      "size": "md",
      "winWidth": 1024,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "bottomLinks": Array [],
        "classes": Object {
          "bottomWrap": "bottomWrap",
          "buttonMobile": "buttonMobile",
          "column": "column",
          "footer": "footer",
          "footerBottom": "footerBottom",
          "footerWithoutColumns": "footerWithoutColumns",
          "link": "link",
          "listElement": "listElement",
          "mobileListElement": "mobileListElement",
        },
        "columns": Array [],
        "size": "md",
        "winWidth": 1024,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Footer styles matches the snapshot 1`] = `
Object {
  "bottomWrap": Object {
    "borderTop": "1px solid #dddddd",
    "paddingTop": 24,
  },
  "buttonMobile": Object {
    "marginTop": 16,
  },
  "column": Object {
    "paddingBottom": 16,
    "paddingLeft": 12,
    "paddingRight": 12,
  },
  "footer": Object {
    "@media (min-width: 992px)": Object {
      "padding": Array [
        32,
        0,
        32,
      ],
    },
    "backgroundColor": "#f5f5f8",
    "padding": Array [
      24,
      0,
      32,
    ],
  },
  "footerBottom": Object {
    "paddingLeft": 12,
    "paddingRight": 12,
  },
  "footerWithoutColumns": Object {
    "@media (min-width: 992px)": Object {
      "padding": Array [
        0,
        0,
        32,
      ],
    },
    "backgroundColor": "#f5f5f8",
    "padding": Array [
      0,
      0,
      32,
    ],
  },
  "link": Object {
    "&:hover, &:focus, &:active": Object {
      "color": "#777777",
    },
    "color": "#777777",
    "textDecoration": "none",
  },
  "listElement": Object {
    "&:first-child": Object {
      "paddingLeft": 0,
    },
    "&:not(:last-child)": Object {
      "&::after": Object {
        "content": "\\"|\\"",
        "position": "absolute",
        "right": -2,
      },
    },
    "display": "inline-block",
    "paddingLeft": 16,
    "paddingRight": 16,
    "position": "relative",
  },
  "mobileListElement": Object {
    "display": "block",
    "paddingBottom": 8,
    "paddingLeft": 0,
  },
}
`;

exports[`FooterJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(WindowSize) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "bottomWrap": "WindowSize-bottomWrap-0-1-8",
        "buttonMobile": "WindowSize-buttonMobile-0-1-9",
        "column": "WindowSize-column-0-1-3",
        "footer": "WindowSize-footer-0-1-1",
        "footerBottom": "WindowSize-footerBottom-0-1-7",
        "footerWithoutColumns": "WindowSize-footerWithoutColumns-0-1-2",
        "link": "WindowSize-link-0-1-4",
        "listElement": "WindowSize-listElement-0-1-5",
        "mobileListElement": "WindowSize-mobileListElement-0-1-6",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "bottomWrap": "WindowSize-bottomWrap-0-1-8",
          "buttonMobile": "WindowSize-buttonMobile-0-1-9",
          "column": "WindowSize-column-0-1-3",
          "footer": "WindowSize-footer-0-1-1",
          "footerBottom": "WindowSize-footerBottom-0-1-7",
          "footerWithoutColumns": "WindowSize-footerWithoutColumns-0-1-2",
          "link": "WindowSize-link-0-1-4",
          "listElement": "WindowSize-listElement-0-1-5",
          "mobileListElement": "WindowSize-mobileListElement-0-1-6",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
